update div li in html and css

--- a/style.css
+++ b/style.css
@@ -16,3 +16,8 @@ div {
 body {
     margin: auto;
 }
+div li {
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: gold;
+}
